--- a/src/views/actors/aides/Carolyn-Jordan.hbs
+++ b/src/views/actors/aides/Carolyn-Jordan.hbs
@@ -14,12 +14,16 @@ name: actors
         
         <h2>Video</h2>
     <ul>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/2">70 Minutes: A First Look into the Hearings</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/4">Testimony - Carolyn Jordan, Senator Cranston's Banking Aide, Part 1 [VIDEO]</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/5">Testimony - Carolyn Jordan, Senator Cranston's Banking Aide, Part 2 [VIDEO]</a></li>
+                <li><a href="/videos/Jordan - Part I">Jordan - Part I</a></li>
+<li><a href="/videos/Jordan - Part II">Jordan - Part II</a></li>
             </ul>
     </div>
 
 
-<p>Senator Cranston’s Chief Banking Aide.</p><p>Jordan joined Cranston’s banking staff in 1972. As early as December of 1984, she met with James Grogan (Lincoln S&amp;L’s chief counsel) to discuss various direct investment laws. Jordan says she had no knowledge of Cranston’s 1987 contact with Keating until long after the April meetings.&nbsp;<br></p><p><br></p>
+<p>Senator Cranston’s Chief Banking Aide.</p>
+<p>Jordan joined Cranston’s banking staff in 1972. As early as 
+December of 1984, she met with James Grogan (Lincoln S&L’s general 
+counsel) to discuss concerns with proposed “direct investment” laws. 
+Jordan says she had no knowledge of Cranston’s 1987 contact with 
+Keating until long after the April meetings.</p>
 <br clear="all">
