--- a/src/views/actors/aides/Laurie-Sedlmayr.hbs
+++ b/src/views/actors/aides/Laurie-Sedlmayr.hbs
@@ -13,11 +13,22 @@ name: actors
         
         <h2>Video</h2>
     <ul>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/2">70 Minutes: A First Look into the Hearings</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/3">Testimony - Laurie Sedlmayr, Senator DeConcini's Banking Aide Part 1 [VIDEO]</a></li>
+                <li><a href="/videos/Sedlmayr - Part I">Sedlmayr - Part I</a></li>
+<li><a href="/videos/Sedlmayr - Part II">Sedlmayr - Part II</a></li>
             </ul>
     </div>
 
 
-<p>Senator DiConcini's Banking Aide.&nbsp;</p><p>In January of 1978, Sedlmayr began working full time for DeConcini. Her first recollection of contact with Keating or ACC was in 1984. Both evidence and her testimony suggest that, as early as December 1986, she warned DeConcini to "stay out of" the Keating/Gray feud. Still, she remained a key go-between player for Keating and DiConcini.<br></p><p>On behalf of DeConcini and McCain, Sedlmayr prepared the memo to Senator Riegle, which invited him to attend the second meeting. McCain's people claimed that they had no knowledge of this memo, and Sedlmayr admits that she forgot to bring the memo to McCain's office to be signed before sending it to Riegle.&nbsp;<br></p><p><br></p>
+<p>Senator DiConcini's Banking Aide.&nbsp;</p>
+<p>In January of 1978, Sedlmayr began working full-time for 
+DeConcini. Her first recollection of contact with Keating or ACC was in 
+1984. Both evidence and her testimony suggest that, as early as 
+December 1986, she warned DeConcini to “stay out of” the 
+Keating/Gray feud. Still, she remained a key go-between player for 
+Keating and DeConcini.</p>
+<p>On behalf of DeConcini and McCain, Sedlmayr prepared the 
+memo to Senator Riegle, which invited him to attend the second 
+meeting. McCain claimed that he and his staff had no knowledge of 
+this memo, and Sedlmayr admits that she forgot to bring the memo to 
+McCain’s office to be signed before sending it to Riegle.</p>
 <br clear="all">
