--- a/src/views/actors/default.hbs
+++ b/src/views/actors/default.hbs
@@ -74,8 +74,14 @@ name: actors
 
 <div class="actor-panel">
 <h3>
-    <a href="/actors/aides/Gwendolyn-VanPaaschen">
-        Gwendolyn VanPaaschen    </a>
+    <a href="/actors/aides/Gwendolyn-VanPaasschen">
+        Gwendolyn VanPaasschen    </a>
+</h3>
+</div>
+
+<div class="actor-panel">
+<h3>
+    <a href="/actors/aides/Kevin-C-Gottlieb">Kevin C. Gottlieb</a>
 </h3>
 </div>
 <p>&nbsp;</p><h2>ACC Affiliates</h2>
@@ -90,8 +96,8 @@ name: actors
 
 <div class="actor-panel">
 <h3>
-    <a href="/actors/affiliates/Jack-Attchison">
-        Jack Attchison    </a>
+    <a href="/actors/affiliates/Jack-Atchison">
+        Jack Atchison    </a>
 </h3>
 </div>
 
@@ -141,7 +147,21 @@ name: actors
 
 <div class="actor-panel">
 <h3>
-    <a href="/actors/supporting_cast/Wright">
+    <a href="/actors/supporting_cast/James-Wright">
         Speaker Wright    </a>
+</h3>
+</div>
+
+<div class="actor-panel">
+<h3>
+    <a href="/actors/supporting_cast/Bill-Seidman">
+        Bill Seidman    </a>
+</h3>
+</div>
+
+<div class="actor-panel">
+<h3>
+    <a href="/actors/supporting_cast/Lee-H-Henkel-Jr">
+        Lee H. Henkel Jr.    </a>
 </h3>
 </div>
