--- a/src/views/actors/senators/Dennis-DeConcini.hbs
+++ b/src/views/actors/senators/Dennis-DeConcini.hbs
@@ -10,9 +10,6 @@ name: actors
                 <li><a href="http://apps.college.brown.edu/keating5/evidence/download/29">Testimony - Senator DeConcini's Account of meeting with McCain</a></li>
                 <li><a href="http://apps.college.brown.edu/keating5/evidence/download/30">Testimony - Senator DeConcini: Part 1</a></li>
                 <li><a href="http://apps.college.brown.edu/keating5/evidence/download/31">Testimony - Senator DeConcini: Part 2</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/39">Testimony - Laurie Sedlmayr, Senator DeConcini's Banking Aide, Part 1</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/40">Testimony - Laurie Sedlmayr, Senator DeConcini's Banking Aide, Part 2</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/41">Testimony - Senator McCain's Account of meeting with DeConcini</a></li>
             </ul>
         
      
@@ -37,9 +34,9 @@ name: actors
         
         <h2>Video</h2>
     <ul>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/2">70 Minutes: A First Look into the Hearings</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/3">Testimony - Laurie Sedlmayr, Senator DeConcini's Banking Aide Part 1 [VIDEO]</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/6">Testimony - Senator DeConcini: Part 1 [VIDEO]</a></li>
+                <li><a href="/videos/DeConcini - Part I">DeConcini - Part I</a></li>
+<li><a href="/videos/DeConcini - Part II">DeConcini - Part II</a></li>
+<li><a href="/videos/DeConcini - Account of Meeting with McCain">DeConcini - Account of Meeting with McCain</a></li>
             </ul>
     </div>
 
