--- a/src/views/actors/senators/Don-Riegle.hbs
+++ b/src/views/actors/senators/Don-Riegle.hbs
@@ -13,20 +13,19 @@ name: actors
      
     <h2>Exhibits</h2>
     <ul>
-                <li><a href="/files/exhibits/DeConcini/%231 Riegle Recommends Gray 04-30-87.pdf">Exhibit #1 Riegle Recommends Gray 04-30-87</a></li>
-<li><a href="/files/exhibits/DeConcini/%232 Riegle to Keating 04-24-88.pdf">Exhibit #2 Riegle to Keating 04-24-88</a></li>
-<li><a href="/files/exhibits/DeConcini/%233 Keating as Riegle Contributor 02-22-88.pdf">Exhibit #3 Keating as Riegle Contributor 02-22-88</a></li>
-<li><a href="/files/exhibits/DeConcini/%234 Gottlieb Office Memo Keating Fundraiser 02-06-87.pdf">Exhibit #4 Gottlieb Office Memo Keating Fundraiser 02-06-87</a></li>
-<li><a href="/files/exhibits/DeConcini/%235 Grogan to Gottlieb Gray Recusal 02-25-87.pdf">Exhibit #5 Grogan to Gottlieb Gray Recusal 02-25-87</a></li>
-<li><a href="/files/exhibits/DeConcini/%236 Lori Riegle Affidavit 01-12-90.pdf">Exhibit #6 Lori Riegle Affidavit 01-12-90</a></li>
-<li><a href="/files/exhibits/DeConcini/%237 FDIC Chairman Affidavit 12-13-90.pdf">Exhibit #7 FDIC Chairman Affidavit 12-13-90</a></li>
-<li><a href="/files/exhibits/DeConcini/%238 Statement from Riegle's Counsel 12-07-89.pdf">Exhibit #8 Statement from Riegle's Counsel 12-07-89</a></li>
+                <li><a href="/files/exhibits/Riegle/%231 Riegle Recommends Gray 04-30-87.pdf">Exhibit #1 Riegle Recommends Gray 04-30-87</a></li>
+<li><a href="/files/exhibits/Riegle/%232 Riegle to Keating 04-24-88.pdf">Exhibit #2 Riegle to Keating 04-24-88</a></li>
+<li><a href="/files/exhibits/Riegle/%233 Keating as Riegle Contributor 02-22-88.pdf">Exhibit #3 Keating as Riegle Contributor 02-22-88</a></li>
+<li><a href="/files/exhibits/Riegle/%234 Gottlieb Office Memo Keating Fundraiser 02-06-87.pdf">Exhibit #4 Gottlieb Office Memo Keating Fundraiser 02-06-87</a></li>
+<li><a href="/files/exhibits/Riegle/%235 Grogan to Gottlieb Gray Recusal 02-25-87.pdf">Exhibit #5 Grogan to Gottlieb Gray Recusal 02-25-87</a></li>
+<li><a href="/files/exhibits/Riegle/%236 Lori Riegle Affidavit 01-12-90.pdf">Exhibit #6 Lori Riegle Affidavit 01-12-90</a></li>
+<li><a href="/files/exhibits/Riegle/%237 FDIC Chairman Affidavit 12-13-90.pdf">Exhibit #7 FDIC Chairman Affidavit 12-13-90</a></li>
+<li><a href="/files/exhibits/Riegle/%238 Statement from Riegle's Counsel 12-07-89.pdf">Exhibit #8 Statement from Riegle's Counsel 12-07-89</a></li>
             </ul>
         
         <h2>Video</h2>
     <ul>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/2">70 Minutes: A First Look into the Hearings</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/13">Testimony - Senator Riegle, Part 1 [VIDEO]</a></li>
+                <li><a href="/videos/Riegle">Riegle</a></li>
             </ul>
     </div>
 
