--- a/src/views/actors/senators/John-McCain.hbs
+++ b/src/views/actors/senators/John-McCain.hbs
@@ -7,35 +7,25 @@ name: actors
 <div class="right-column">
         <h2>Testimony</h2>
     <ul>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/29">Testimony - Senator DeConcini's Account of meeting with McCain</a></li>
                 <li><a href="http://apps.college.brown.edu/keating5/evidence/download/41">Testimony - Senator McCain's Account of meeting with DeConcini</a></li>
                 <li><a href="http://apps.college.brown.edu/keating5/evidence/download/42">Testimony - Senator McCain, Part 1</a></li>
                 <li><a href="http://apps.college.brown.edu/keating5/evidence/download/43">Testimony - Senator McCain, Part 2</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/45">Testimony - Gwendolyn VanPaaschen, McCain's Banking Aide, Part 1</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/46">Testimony - Gwendolyn VanPaaschen, McCain's Banking Aide, Part 2</a></li>
             </ul>
         
      
     <h2>Exhibits</h2>
     <ul>
-    <li><a href="/files/exhibits/DeConcini/%231 McCain to Gray 05-25-89.pdf">Exhibit #1 McCain to Gray 05-25-89</a></li>
-<li><a href="/files/exhibits/DeConcini/%232 Gray's Response to (1) 05-30-89.pdf">Exhibit #2 Gray's Response to (1) 05-30-89</a></li>
-<li><a href="/files/exhibits/DeConcini/%233 McCain's Response to (2) 06-02-89.pdf">Exhibit #3 McCain's Response to (2) 06-02-89</a></li>
-<li><a href="/files/exhibits/DeConcini/%234 McCain Press Release 07-25-89.pdf">Exhibit #4 McCain Press Release 07-25-89</a></li>
-<li><a href="/files/exhibits/DeConcini/%235 McCain to Gray 08-08-84.pdf">Exhibit #5 McCain to Gray 08-08-84</a></li>
-<li><a href="/files/exhibits/DeConcini/%236 McCain to Gray 07-21-86.pdf">Exhibit #6 McCain to Gray 07-21-86</a></li>
-<li><a href="/files/exhibits/DeConcini/%237 McCain Office Memo 11-03-86.pdf">Exhibit #7 McCain Office Memo 11-03-86</a></li>
-<li><a href="/files/exhibits/DeConcini/%238 McCain Office Memo 03-24-87.pdf">Exhibit #8 McCain Office Memo 03-24-87</a></li>
+    <li><a href="/files/exhibits/McCain/%231 McCain to Gray 05-25-89.pdf">Exhibit #1 McCain to Gray 05-25-89</a></li>
+<li><a href="/files/exhibits/McCain/%232 Gray's Response to (1) 05-30-89.pdf">Exhibit #2 Gray's Response to (1) 05-30-89</a></li>
+<li><a href="/files/exhibits/McCain/%233 McCain's Response to (2) 06-02-89.pdf">Exhibit #3 McCain's Response to (2) 06-02-89</a></li>
+<li><a href="/files/exhibits/McCain/%234 McCain Press Release 07-25-89.pdf">Exhibit #4 McCain Press Release 07-25-89</a></li>
+<li><a href="/files/exhibits/McCain/%235 McCain to Gray 08-08-84.pdf">Exhibit #5 McCain to Gray 08-08-84</a></li>
+<li><a href="/files/exhibits/McCain/%236 McCain to Gray 07-21-86.pdf">Exhibit #6 McCain to Gray 07-21-86</a></li>
+<li><a href="/files/exhibits/McCain/%237 McCain Office Memo 11-03-86.pdf">Exhibit #7 McCain Office Memo 11-03-86</a></li>
+<li><a href="/files/exhibits/McCain/%238 McCain Office Memo 03-24-87.pdf">Exhibit #8 McCain Office Memo 03-24-87</a></li>
                 <li><a href="http://apps.college.brown.edu/keating5/evidence/download/13">Exhibit #70: Memo, to McCain from VanPaaschen, Banking Aide</a></li>
                 <li><a href="http://apps.college.brown.edu/keating5/evidence/download/19">Exhibit #200: Memo, VanPaaschen to McCain, "Talking Points for Meeting with Ed Gray"</a></li>
                 
-            </ul>
-        
-        <h2>Video</h2>
-    <ul>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/2">70 Minutes: A First Look into the Hearings</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/12">Testimony - Senaor McCain, Part 2 [VIDEO]</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/14">Testimony - Gwendolyn VanPasschen, McCain's Banking Aide, Part 2 [Video]</a></li>
             </ul>
     </div>
 
