--- a/src/views/actors/supporting_cast/Danny-Wall.hbs
+++ b/src/views/actors/supporting_cast/Danny-Wall.hbs
@@ -6,5 +6,11 @@ name: actors
 
 
 
-<p>FHLB chairman that succeeded Edwin Gray after Gray had stepped down from his post. Some say Wall was more sympathetic to Keating.&nbsp;<br></p>
+<p>FHLBB Chairman that succeeded Edwin Gray in mid-1987, after 
+Gray had stepped down from his post. Some say Wall was more 
+sympathetic to Keating. As the time, the House Banking Committee 
+Chairman asked President Bush to dismiss him. Under his 
+Chairmanship, the Bank Board did not follow the San Francisco officials’
+recommendation to seize Lincoln. Mr. Wall said that there was 
+insufficient proof to justify the action.</p>
 <br clear="all">
