--- a/src/views/actors/supporting_cast/Ed-Gray.hbs
+++ b/src/views/actors/supporting_cast/Ed-Gray.hbs
@@ -18,19 +18,18 @@ name: actors
                 
                 <li><a href="http://apps.college.brown.edu/keating5/evidence/download/22">Exhibit #418: Affidavit of Shannon Fairbanks, Chief of Staff of the FHLBB</a></li>
                 <li><a href="http://apps.college.brown.edu/keating5/evidence/download/23">Exhibit #425: Affidavit of Mary Ellen Taylor, Director of Congressional Relations for the FHLBB</a></li>
-                <li><a href="/files/exhibits/DeConcini/%231 Gray Statement 09-19-86.pdf">Exhibit #1 Gray Statement 09-19-86</a></li>
-                <li><a href="/files/exhibits/DeConcini/%232 Gray to Cirona 09-22-86.pdf">Exhibit #2 Gray to Cirona 09-22-86</a></li>
-                <li><a href="/files/exhibits/DeConcini/%233 Cirona to Gray 09-25-86.pdf">Exhibit #3 Cirona to Gray 09-25-86</a></li>
-                <li><a href="/files/exhibits/DeConcini/%234 Gray to Patriarca 06-02-88.pdf">Exhibit #4 Gray to Patriarca 06-02-88</a></li>
-                <li><a href="/files/exhibits/DeConcini/%235 Patriarca to Gray 07-14-88.pdf">Exhibit #5 Patriarca to Gray 07-14-88</a></li>
-                <li><a href="/files/exhibits/DeConcini/Black Transcript 04-10-87.pdf">Black Transcript 04-10-87</a></li>
+                <li><a href="/files/exhibits/Gray/%231 Gray Statement 09-19-86.pdf">Exhibit #1 Gray Statement 09-19-86</a></li>
+                <li><a href="/files/exhibits/Gray/%232 Gray to Cirona 09-22-86.pdf">Exhibit #2 Gray to Cirona 09-22-86</a></li>
+                <li><a href="/files/exhibits/Gray/%233 Cirona to Gray 09-25-86.pdf">Exhibit #3 Cirona to Gray 09-25-86</a></li>
+                <li><a href="/files/exhibits/Gray/%234 Gray to Patriarca 06-02-88.pdf">Exhibit #4 Gray to Patriarca 06-02-88</a></li>
+                <li><a href="/files/exhibits/Gray/%235 Patriarca to Gray 07-14-88.pdf">Exhibit #5 Patriarca to Gray 07-14-88</a></li>
+                <li><a href="/files/exhibits/Gray/Black Transcript 04-10-87.pdf">Black Transcript 04-10-87</a></li>
             </ul>
         
         <h2>Video</h2>
     <ul>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/2">70 Minutes: A First Look into the Hearings</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/8">Testimony - Ed Gray, FHLBB Chair, Part 2 [VIDEO]</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/9">Testimony - Ed Gray, FHLBB Chair, Part 3 [VIDEO]</a></li>
+                <li><a href="/videos/Gray - Part II">Gray - Part II</a></li>
+                <li><a href="/videos/Gray - Part III">Gray - Part III</a></li>
             </ul>
     </div>
 
