--- a/src/views/actors/supporting_cast/SF-Regulators.hbs
+++ b/src/views/actors/supporting_cast/SF-Regulators.hbs
@@ -13,5 +13,21 @@ name: actors
     </div>
 
 
-<p>William "Bill" Black (general counsil), James Cirona (President and Principal Supervisory Agent), Michael Patriarca (Director of Agency Functions) and Richard Sanchez (Supervisory Agent for Lincoln S&amp;LA of Irvine CA) were summoned to Washington D.C. to discuss the San Fransisco FHLB's extended examination of Lincoln S&amp;L. The four men were present at the April 9th meeting and contend that Lincoln was exaggerating the value of properties in which it had invested or on which it had made loans.&nbsp;</p><p>Black's boss, Federal Home Loan Bank Board chairman Ed Gray, asked Black to report back to him about the April 9 meeting. Black took the extensive notes that formed the basis for the infamous "Black Memorandum." While many questioned exactly how Mr. Black was able to take such detailed notes, the substance of these notes was not significantly challenged by any of the witnesses to the Senate Ethics Committee. &nbsp;</p>
+<p>
+William "Bill" Black – FSLIC general counsel<br />
+James Cirona – FHLB-SF President and Principal Supervisory Agent<br />
+Michael Patriarca – FHLB-SF Director of Agency Functions<br />
+Richard Sanchez – FHLB-SF Supervisory Agent for Lincoln S&L of Irvine,
+CA<br /></p><p>
+These regulators were summoned to Washington D.C. to discuss the 
+FHLB-SF extended examination of Lincoln S&L. The four men were 
+present at the April 9th meeting and contend that Lincoln was 
+exaggerating the value of properties in which it had invested or on 
+which it had made loans.</p><p>
+Black’s boss, FHLBB Chairman Ed Gray, asked Black to report back to 
+him about the April 9th meeting. Black took the extensive notes that 
+formed the basis for the infamous “Black memorandum.” While many 
+questioned exactly how Mr. Black was able to take such detailed notes,
+the substance of these notes was not significantly challenged by any of
+the witnesses to the Senate Ethics Committee.</p>
 <br clear="all">
