--- a/src/views/default.hbs
+++ b/src/views/default.hbs
@@ -30,8 +30,7 @@ for each of the Senators and other major actors. Some facts are agreed upon by a
 arties in the case, including the remarkably detailed minutes of the meeting with 
 the San Francisco regulators, while others are hotly contested. It is up to you to 
 weigh the evidence after comparing and contrasting the various testimonies.</p>
-<p>The “Background” section places the events in the context of the collapse of the 
-S&L industry.  The “Related Issues” section provides background reading on theories
+<p>The “Related Issues” section provides background reading on theories
 of representation, the S&L industry's collapse, and the appropriate limits of
 constituent service. The “Enduring Issues” section highlights broader issues from
 this case that are still relevant today.</p>
