--- a/src/views/evidence.hbs
+++ b/src/views/evidence.hbs
@@ -1,68 +1,31 @@
 ---
 name: evidence
 ---
-<h2>Evidence</h2>
+<div class="center"><h2>Additional Information</h2>
+<div>
+<h3>Acronyms List</h3>
+ACC – American Continental Corporation<br />
+FDIC – Federal Deposit Insurance Corporation<br />
+FHLB-SF – Federal Home Loan Bank of San Francisco<br />
+FHLBB – Federal Home Loan Bank Board<br />
+FSLIC – Federal Savings and Loan Insurance Corporation<br />
+RTC – Resolution Trust Corporation<br />
+S&L - Savings & loan bank (i.e. thrift bank)<br />
+</div>
 <div class="evidence-wrapper">
 <div class="evidence-panel">
     <h3>News Articles</h3>
-    <ul>
-                <li><a href="/files/evidence/2">$1.1 Billion Ban Fraud Suit Filled</a></li>
-                <li><a href="/files/evidence/3">Bank Board Clears Henkel of Conflict Charge</a></li>
-                <li><a href="/files/evidence/4">S&amp;L Regulator Feuds With Lincoln Cheif</a></li>
-                <li><a href="/files/evidence/5">Everything's Black and White When It Comes to Ed Gray</a></li>
-                <li><a href="/files/evidence/6">Gray Reimbursed Home Loan Banks for Wife's Travles</a></li>
-                <li><a href="/files/evidence/7">Henkel Resigns FHLBB Post, Criticizes Justice Dept. Probe</a></li>
-                <li><a href="/files/evidence/8">S&amp;L High Rollers Target Reformer</a></li>
-                <li><a href="/files/evidence/9">Savings &amp; Loans &amp; Intrigue &amp; 'Meddling'</a></li>
-                <li><a href="/files/evidence/10">The $150 Billon Calamity</a></li>
-                <li><a href="/files/evidence/11">Bank Board Chief, Critic Are Feuding</a></li>
-                <li><a href="/files/evidence/12">The Savings and Loan Crisis</a></li>
-            </ul>
-</div>
-
-<div class="evidence-panel">
-    <h3>Transcripts</h3>
-    <ul>
-                <li><a href="/files/evidence/27">Testimony - Carolyn Jordan, Senator Cranston's Banking Aide, Part 1</a></li>
-                <li><a href="/files/evidence/28">Testimony - Carolyn Jordan, Senator Cranston's Banking Aide, Part 2</a></li>
-                <li><a href="/files/evidence/29">Testimony - Senator DeConcini's Account of meeting with McCain</a></li>
-                <li><a href="/files/evidence/30">Testimony - Senator DeConcini: Part 1</a></li>
-                <li><a href="/files/evidence/31">Testimony - Senator DeConcini: Part 2</a></li>
-                <li><a href="/files/evidence/32">Testimony - Senator Glenn</a></li>
-                <li><a href="/files/evidence/33">Testimony - Ed Gray, FHLBB Chair, Part 1</a></li>
-                <li><a href="/files/evidence/34">Testimony - Ed Gray, FHLBB Chair, Part 2</a></li>
-                <li><a href="/files/evidence/35">Testimony - Ed Gray, FHLBB Chair, Part 3</a></li>
-                <li><a href="/files/evidence/36">Testimony - James Grogan, ACC's Chief Counsel</a></li>
-                <li><a href="/files/evidence/37">Testimony - Joy Jacobson, Senator DeConcini's Head Fundraiser, Part 1</a></li>
-                <li><a href="/files/evidence/38">Testimony - Joy Jacobson, Senator DeConcini's Head Fundraiser, Part 2</a></li>
-                <li><a href="/files/evidence/39">Testimony - Laurie Sedlmayr, Senator DeConcini's Banking Aide, Part 1</a></li>
-                <li><a href="/files/evidence/40">Testimony - Laurie Sedlmayr, Senator DeConcini's Banking Aide, Part 2</a></li>
-                <li><a href="/files/evidence/41">Testimony - Senator McCain's Account of meeting with DeConcini</a></li>
-                <li><a href="/files/evidence/42">Testimony - Senator McCain, Part 1</a></li>
-                <li><a href="/files/evidence/43">Testimony - Senator McCain, Part 2</a></li>
-                <li><a href="/files/evidence/44">Testimony - Senator Riegle, Part 1</a></li>
-                <li><a href="/files/evidence/45">Testimony - Gwendolyn VanPaaschen, McCain's Banking Aide, Part 1</a></li>
-                <li><a href="/files/evidence/46">Testimony - Gwendolyn VanPaaschen, McCain's Banking Aide, Part 2</a></li>
-            </ul>
-</div>
-
-<div class="evidence-panel">
-    <h3>Videos</h3>
-    <ul>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/2">70 Minutes: A First Look into the Hearings</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/3">Testimony - Laurie Sedlmayr, Senator DeConcini's Banking Aide Part 1 [VIDEO]</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/4">Testimony - Carolyn Jordan, Senator Cranston's Banking Aide, Part 1 [VIDEO]</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/5">Testimony - Carolyn Jordan, Senator Cranston's Banking Aide, Part 2 [VIDEO]</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/6">Testimony - Senator DeConcini: Part 1 [VIDEO]</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/7">Testimony - Senator Glenn [VIDEO]</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/8">Testimony - Ed Gray, FHLBB Chair, Part 2 [VIDEO]</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/9">Testimony - Ed Gray, FHLBB Chair, Part 3 [VIDEO]</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/10">Testimony - James Grogan, ACC's Chief Counsel [VIDEO]</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/11">Testimony - Joy Jacobson, Senator DeConcini's Head Fundraiser, Part 1 [VIDEO]</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/12">Testimony - Senaor McCain, Part 2 [VIDEO]</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/13">Testimony - Senator Riegle, Part 1 [VIDEO]</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/14">Testimony - Gwendolyn VanPasschen, McCain's Banking Aide, Part 2 [Video]</a></li>
-            </ul>
+                <a href="/files/evidence/2">$1.1 Billion Ban Fraud Suit Filed</a><br />
+                <a href="/files/evidence/3">Bank Board Clears Henkel of Conflict Charge</a><br />
+                <a href="/files/evidence/4">S&amp;L Regulator Feuds With Lincoln Chief</a><br />
+                <a href="/files/evidence/5">Everything's Black and White When It Comes to Ed Gray</a><br />
+                <a href="/files/evidence/6">Gray Reimbursed Home Loan Banks for Wife's Travles</a><br />
+                <a href="/files/evidence/7">Henkel Resigns FHLBB Post, Criticizes Justice Dept. Probe</a><br />
+                <a href="/files/evidence/8">S&amp;L High Rollers Target Reformer</a><br />
+                <a href="/files/evidence/9">Savings &amp; Loans &amp; Intrigue &amp; 'Meddling'</a><br />
+                <a href="/files/evidence/10">The $150 Billon Calamity</a><br />
+                <a href="/files/evidence/11">Bank Board Chief, Critic Are Feuding</a><br />
+                <a href="/files/evidence/12">The Savings and Loan Crisis</a>
 </div>
     
-</div>
+</div></div>
