--- a/src/css/default.styl
+++ b/src/css/default.styl
@@ -13,7 +13,7 @@ body
   > .container
     background url(/img/satinweave.png)
     min-height 100%
-    width 75%
+    width 1140px
     padding-bottom 30px
     
 .navpic
