--- a/src/partials/nav.hbs
+++ b/src/partials/nav.hbs
@@ -17,9 +17,9 @@
       <li{{#is name 'about'}} class="active"{{/is}}><a href="/about">Overall Story</a></li>
       <li{{#is name 'timeline'}} class="active"{{/is}}><a href="/timeline">Timeline</a></li>
       <li{{#is name 'actors'}} class="active"{{/is}}><a href="/actors">Actors</a></li>
-      <li{{#is name 'evidence'}} class="active"{{/is}}><a href="/evidence">Evidence</a></li>
       <li{{#is name 'enduring'}} class="active"{{/is}}><a href="/enduring">Enduring Issues</a></li>
       <li{{#is name 'resources'}} class="active"{{/is}}><a href="/resources">Related Issues</a></li>
+      <li{{#is name 'evidence'}} class="active"{{/is}}><a href="/evidence">Additional Information</a></li>
     </ul>
     <form class="navbar-form navbar-right" action="" role="search">
       <div class="form-group">
