--- a/src/views/actors/aides/Joy-Jacobson.hbs
+++ b/src/views/actors/aides/Joy-Jacobson.hbs
@@ -7,24 +7,25 @@ name: actors
 <div class="right-column">
         <h2>Testimony</h2>
     <ul>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/37">Testimony - Joy Jacobson, Senator DeConcini's Head Fundraiser, Part 1</a></li>
+                <li><a href="/files/transcripts/Testimony%20-%20Joy%20Jacobson%2C%20Senator%20DeConcini%27s%20Head%20Fundraiser%2C%20Part%201.pdf">Testimony - Joy Jacobson, Senator DeConcini's Head Fundraiser, Part 1</a></li>
+                <li><a href="/files/transcripts/Testimony%20-%20Joy%20Jacobson%2C%20Senator%20DeConcini%27s%20Head%20Fundraiser%2C%20Part%202.pdf">Testimony - Joy Jacobson, Senator DeConcini's Head Fundraiser, Part 2</a></li>
+                <li><a href="/files/evidence/38">Testimony - Joy Jacobson, Senator DeConcini's Head Fundraiser, Part 3</a></li>
             </ul>
         
         <h2>Video</h2>
     <ul>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/2">70 Minutes: A First Look into the Hearings</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/11">Testimony - Joy Jacobson, Senator DeConcini's Head Fundraiser, Part 1 [VIDEO]</a></li>
+                <li><a href="/videos/Jacobson - Part I">Jacobson - Part I</a></li>
+<li><a href="/videos/Jacobson - Part II">Jacobson - Part II</a></li>
+<li><a href="/videos/Jacobson - Part III">Jacobson - Part III</a></li>
             </ul>
     </div>
 
 <img src="https://apps.college.brown.edu/keating5/img/actors/Joy-Jacobson.jpg" alt="Joy Jacobson" class="float-left">
-<style>@font-face {
-  font-family: "Times New Roman";
-}p.MsoNormal, li.MsoNormal, div.MsoNormal { margin: 0in 0in 0.0001pt; font-size: 12pt; font-family: "Times New Roman"; }table.MsoNormalTable { font-size: 10pt; font-family: "Times New Roman"; }div.Section1 { page: Section1; }</style>
-
-
-
-<p class="MsoNormal"></p><p class="MsoNormal">Senator Cranston’s Head Fundraiser.&nbsp;</p><p class="MsoNormal"><br></p><p class="MsoNormal">In 1987, Jacobson began working for Cranston as a Senate staff member. In 1984, she shifted roles and became his “Fundraising Coordinator.” Jacobson was present at a number of the meetings attended by Cranston, Grogan &nbsp;and Keating.&nbsp;</p><p class="MsoNormal">&nbsp;</p><p><br></p><p></p>
+<p>Senator Cranston’s Chief Fundraiser</p>
+<p>In 1984, Jacobson began working for Cranston as a Senate staff 
+member. In 1987, she shifted roles and became his “Fundraising 
+Coordinator.” Jacobson was present at a number of the meetings 
+attended by Cranston, Grogan, and Keating.</p>
 
 
 
