--- a/src/views/enduring.hbs
+++ b/src/views/enduring.hbs
@@ -3,10 +3,10 @@ name: enduring
 ---
 <h2>Enduring Issues<h2>
 
-<h3>Constituent Service</h3>
+<h3>1. Constituent Service</h3>
 <p>After the Keating Five case ended, the Senate formed a committee to consider new rules concerning constituent service and involvement with administrative agencies. That committee ultimately made recommendations that focused largely on campaign donations and avoiding any nexus between actual donations and specific acts of constituent service. Those recommendations leave open the question of how to distinguish proper forms of constituent service from improper ones.</p>
 
-<h3>The Structure of Ethics Regulation</h3>
+<h3>2. The Structure of Ethics Regulation</h3>
 <p>Another enduring issue concerns the quality and effectiveness of ethics regulation in Senate, and Congress at large. Some critics of the Keating Five proceedings concluded that key decisions about who to charge in the case were tainted by party politics. Others have argued that the Senate was embarrassed enough by the Keating Five proceedings that they have avoided any similar spectacles since then. Is any elected body capable of regulating itself in a manner that avoids partisan politics? Aren’t most forms of self-regulation prone to problems of leniency? The House, in contrast, formed an “independent” ethics committee to address the problems created by partisanship. There are also various forms of ethics commissions at the state level that are structured to minimize or balance partisan interests. Are these forms of regulation preferable, or do they suffer from a lack of sufficient democratic checks?</p>
 
 <ul>
