Change download links to new site

--- a/src/views/actors/affiliates/James-Grogan.hbs
+++ b/src/views/actors/affiliates/James-Grogan.hbs
@@ -7,7 +7,7 @@ name: actors
 <div class="right-column">
         <h2>Testimony</h2>
     <ul>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/36">Testimony - James Grogan, ACC's Chief Counsel</a></li>
+                <li><a href="/files/evidence/36">Testimony - James Grogan, ACC's Chief Counsel</a></li>
             </ul>
         
         <h2>Video</h2>
