--- a/src/views/actors/aides/Gwendolyn-VanPaasschen.hbs
+++ b/src/views/actors/aides/Gwendolyn-VanPaasschen.hbs
@@ -7,8 +7,8 @@ name: actors
 <div class="right-column">
         <h2>Testimony</h2>
     <ul>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/45">Testimony - Gwendolyn VanPaaschen, McCain's Banking Aide, Part 1</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/46">Testimony - Gwendolyn VanPaaschen, McCain's Banking Aide, Part 2</a></li>
+                <li><a href="/files/evidence/45">Testimony - Gwendolyn VanPaaschen, McCain's Banking Aide, Part 1</a></li>
+                <li><a href="/files/evidence/46">Testimony - Gwendolyn VanPaaschen, McCain's Banking Aide, Part 2</a></li>
             </ul>
         
         <h2>Video</h2>
