--- a/src/views/actors/senators/John-Glenn.hbs
+++ b/src/views/actors/senators/John-Glenn.hbs
@@ -7,7 +7,7 @@ name: actors
 <div class="right-column">
         <h2>Testimony</h2>
     <ul>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/32">Testimony - Senator Glenn</a></li>
+                <li><a href="/files/evidence/32">Testimony - Senator Glenn</a></li>
             </ul>
         
      
