--- a/src/views/actors/aides/Carolyn-Jordan.hbs
+++ b/src/views/actors/aides/Carolyn-Jordan.hbs
@@ -7,8 +7,8 @@ name: actors
 <div class="right-column">
         <h2>Testimony</h2>
     <ul>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/27">Testimony - Carolyn Jordan, Senator Cranston's Banking Aide, Part 1</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/28">Testimony - Carolyn Jordan, Senator Cranston's Banking Aide, Part 2</a></li>
+                <li><a href="/files/evidence/27">Testimony - Carolyn Jordan, Senator Cranston's Banking Aide, Part 1</a></li>
+                <li><a href="/files/evidence/28">Testimony - Carolyn Jordan, Senator Cranston's Banking Aide, Part 2</a></li>
             </ul>
         
         
