Fix broken links

--- a/src/views/default.hbs
+++ b/src/views/default.hbs
@@ -2,11 +2,11 @@
 name: home
 ---
 <div class="navpic">
-  <a href=""><img src="/img/actors/Alan-Cranston.jpg" title="Sen. Alan Cranston" /></a>
-  <a href=""><img src="/img/actors/Dennis-DeConcini.jpg" title="Sen. Dennis DeConcini" /></a>
-  <a href=""><img src="/img/actors/John-Glenn.jpg" title="Sen. John Glenn" /></a>
-  <a href=""><img src="/img/actors/John-McCain.jpg" title="Sen. John McCain" /></a>
-  <a href=""><img src="/img/actors/Don-Riegle.jpg" title="Sen. Don Riegle" /></a>
+  <img src="/img/actors/Alan-Cranston.jpg" title="Sen. Alan Cranston" />
+  <img src="/img/actors/Dennis-DeConcini.jpg" title="Sen. Dennis DeConcini" />
+  <img src="/img/actors/John-Glenn.jpg" title="Sen. John Glenn" />
+  <img src="/img/actors/John-McCain.jpg" title="Sen. John McCain" />
+  <img src="/img/actors/Don-Riegle.jpg" title="Sen. Don Riegle" />
 </div>
 
 <p>Welcome to "Understanding the Keating Five," the only comprehensive 
