--- a/src/views/actors/affiliates/ACC.hbs
+++ b/src/views/actors/affiliates/ACC.hbs
@@ -4,7 +4,7 @@ name: actors
 
 <h2> ACC</h2>
 
-<img src="https://apps.college.brown.edu/keating5/img/actors/american_continental_corp.png" alt="ACC" class="float-left">
+<img src="/img/actors/american_continental_corp.png" alt="ACC" class="float-left">
 <p>
 American Continental Corporation (ACC) was an Ohio-chartered, 
 Phoenix, Arizona-based real estate company that was active in the 
