--- a/src/views/actors/affiliates/Lincoln-Savings-and-Loan.hbs
+++ b/src/views/actors/affiliates/Lincoln-Savings-and-Loan.hbs
@@ -14,7 +14,7 @@ name: actors
             </ul>
     </div>
 
-<img src="https://apps.college.brown.edu/keating5/img/actors/Lincoln-Savings.jpg" alt="Lincoln Savings and Loan" class="float-left">
+<img src="/img/actors/Lincoln-Savings.jpg" alt="Lincoln Savings and Loan" class="float-left">
 <p>
 The Lincoln Savings and Loan Association of Irvine, California was 
 the financial institution at the heart of the Keating Five scandal. 
