--- a/src/views/actors/aides/Joy-Jacobson.hbs
+++ b/src/views/actors/aides/Joy-Jacobson.hbs
@@ -20,7 +20,7 @@ name: actors
             </ul>
     </div>
 
-<img src="https://apps.college.brown.edu/keating5/img/actors/Joy-Jacobson.jpg" alt="Joy Jacobson" class="float-left">
+<img src="/img/actors/Joy-Jacobson.jpg" alt="Joy Jacobson" class="float-left">
 <p>Senator Cranston’s Chief Fundraiser</p>
 <p>In 1984, Jacobson began working for Cranston as a Senate staff 
 member. In 1987, she shifted roles and became his “Fundraising 
