--- a/src/views/actors/supporting_cast/SF-Regulators.hbs
+++ b/src/views/actors/supporting_cast/SF-Regulators.hbs
@@ -8,7 +8,7 @@ name: actors
         
         <h2>Video</h2>
     <ul>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/watch/2">70 Minutes: A First Look into the Hearings</a></li>
+                <li><a href="/videos/70-Minutes">70 Minutes: A First Look into the Hearings</a></li>
             </ul>
     </div>
 
