--- a/src/views/actors/affiliates/James-Grogan.hbs
+++ b/src/views/actors/affiliates/James-Grogan.hbs
@@ -16,7 +16,7 @@ name: actors
             </ul>
     </div>
 
-<img src="https://apps.college.brown.edu/keating5/img/actors/Grogan.jpg" alt="James Grogan" class="float-left" height="120" width="120">
+<img src="/img/actors/Grogan.jpg" alt="James Grogan" class="float-left" height="120" width="120">
 <p>
 James “Jim” Grogan was ACC’s chief counsel and Keating’s “right hand policy man.” Grogan did a significant amount of Keating’s behind-the-scenes work in lobbying various politicians to support different bills that were beneficial to ACC and Lincoln. A number of the senators say that they or their staff dealt mostly with Grogan, not Keating, in the months surrounding the April 1987 meetings.
 The infamous <a href="/files/exhibits/Lincoln/%234%20_Get%20Black_%20Memo%2007-15-87.jpeg">“Get Black” memo</a> penned by Keating was addressed to Grogan. 
