--- a/src/views/actors/supporting_cast/Lee-H-Henkel-Jr.hbs
+++ b/src/views/actors/supporting_cast/Lee-H-Henkel-Jr.hbs
@@ -4,6 +4,14 @@ name: actors
 
 <h2>Lee H. Henkel Jr.</h2>
 
+<div class="right-column">
+    <h2>Exhibits</h2>
+    <ul><li><a href="/files/exhibits/%231 Lincoln Defending Henkel 02-25-87.pdf">Exhibit #1 Lincoln Defending Henkel 02-25-87</a></li>
+<li><a href="/files/exhibits/%232 _Not Public Info._ Henkel to Proxmire 01-16-87.pdf">Exhibit #2 _Not Public Info._ Henkel to Proxmire 01-16-87</a></li>
+<li><a href="/files/exhibits/%233 Henkel Grandfathering Proposal Summary.pdf">Exhibit #3 Henkel Grandfathering Proposal Summary</a></li>
+</ul>
+</div>
+
 <p>FHLBB Board Member</p>
 <p>
 The Reagan Administration appointed Henkel to the FHLBB in late
