Brown library video links

--- a/src/views/actors/senators/John-McCain.hbs
+++ b/src/views/actors/senators/John-McCain.hbs
@@ -27,6 +27,11 @@ name: actors
                 <li><a href="/files/evidence/19">Exhibit #10: Memo, VanPaasschen to McCain, "Talking Points for Meeting with Ed Gray"</a></li>
                 
             </ul>
+            
+    <h2>Videos</h2>
+    <ul>
+      <li><a href="https://library.brown.edu/reserves/student/student.php?task=begin&semesterid=37&term=201310">McCain - All Parts</a> (Good Government students only)</li>
+    </ul>
     </div>
 
 <img src="/img/actors/John-McCain.jpg" alt="Sen. John McCain" class="float-left">
