--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script src="/js/scripts.js"></script>
   </head>
   <body>
     <div class="container">
@@ -18,7 +20,5 @@
         <div class="col-lg-offset-1 col-lg-10">{{> body}}</div>
       </div>
     </div>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-    <script src="/js/scripts.min.js"></script>
   </body>
 </html>
