--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -6,6 +6,7 @@
     <title>Keating Five</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <meta name="google-site-verification" content="vqtvMUYMUFSG1EWlZUUhEEIy6_d4MoCoaz3dqMpnB9U" />
 
     <link rel="stylesheet" href="/css/styles.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
